<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/Home"
        android:icon="@drawable/home_icon"
        android:id="@+id/home_item_menu_ly"/>

    <item
        android:title="@string/My_List"
        android:icon="@drawable/new_job_icon"
        android:id="@+id/my_all_props_item_menu_ly"/>


    <item
        android:title="@string/chats"
        android:icon="@drawable/chats_icon"
        android:id="@+id/chats_item_menu_ly"/>

    <!--<item-->
        <!--android:title="@string/done_jobs"-->
        <!--android:icon="@drawable/done_icon_white"-->
        <!--android:id="@+id/done_job_item_menu_ly"/>-->

    <!--<item-->
        <!--android:title="@string/store"-->
        <!--android:icon="@drawable/store_icon"-->
        <!--android:id="@+id/store_item_menu_ly" />-->

    <item
        android:title="@string/hesab"
        android:icon="@drawable/profile_icon"
        android:id="@+id/profile_item_menu_ly"/>

</menu>