<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">










        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:elevation="5dp"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:background="@drawable/item_background_ly"
            android:foreground="@drawable/ripple">








            <ImageView
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:src="@drawable/profile_icon"
                android:id="@+id/list_Image_view" />









            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:layout_margin="10dp"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/xedmat"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_view_text_size12"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/xedmat"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_view_text_size12"
                        android:layout_weight="1"/>


                </LinearLayout>








                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/xadamat_time"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_view_text_size12"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/xadamat_time"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_view_text_size12"
                        android:layout_weight="1"/>


                </LinearLayout>






                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_margin="@dimen/margin_5"/>







                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vaeyat"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_view_text_size12"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vaeyat"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_view_text_size12"
                        android:layout_weight="1"/>


                </LinearLayout>





            </LinearLayout>














            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:layout_margin="10dp"
                android:src="@drawable/arrow_left_icon"
                android:visibility="gone"/>








        </LinearLayout>

















</RelativeLayout>